# docling-rag-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWLEDGE_BASE_CLINE.md  LICENSE  Makefile  README.md  SESSION_JOURNAL.md  docker-compose.yml  opencode-rag-knowledge-base.md  profiles.yaml  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
data/output_test/: sample.doctags  sample.json  sample.md  sample_image.doctags  sample_image.json  sample_text.doctags  sample_text.json  sample_text.md
data/sample/: destination_cleaned_lower_case_2020.xlsx
docs/: API_REFERENCE.md  LICENSING.md  SESSION_JOURNAL.md  USER_MANUAL.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-19/: .graphify_labels.json  (+3 more)
monitoring/: prometheus.yml
reports/: backend-engineer-report-v2.md  backend-engineer-report.md  data-engineer-report-v2.md  data-engineer-report.md  dev-vs-main-comparison.md  devops-engineer-report.md  final-summary.md  lead-report.md  lead-review.md  session-10-architect-review.md  session-9-final.md
scripts/: chat.py  clean_existing_data.py  comparison_viewer.py  evaluate_rag.py  run.py  viewer.py
skills/: SKILL.md
src/: config.py
tests/: conftest.py  test_api.py  test_chunker_markdown.py  test_cleaner.py  test_config.py  test_engines.py  test_hybrid_search.py  test_integration.py  test_llm_client.py  test_profiles.py  test_quality.py  test_quality_scorer.py  test_reranker.py  test_validation.py
(+43 files in other folders)
